stateDiagram-v2
    [*] --> NoListener : DragSourceContext([DragGestureEvent trigger], [Cursor dragCursor], [Image dragImage], [Point offset], [Transferable t], [DragSourceListener dsl])

    NoListener --> NoListener : DragSource getDragSource()
    NoListener --> NoListener : Component getComponent()
    NoListener --> NoListener : DragGestureEvent getTrigger()
    NoListener --> NoListener : int getSourceActions()
    NoListener --> NoListener : void setCursor([Cursor c])
    NoListener --> NoListener : Cursor getCursor()
    NoListener --> HasListener : void addDragSourceListener([DragSourceListener dsl])
    NoListener --> NoListener : void removeDragSourceListener([DragSourceListener dsl])
    NoListener --> NoListener : void transferablesFlavorsChanged()
    NoListener --> NoListener : void dragEnter([DragSourceDragEvent dsde])
    NoListener --> NoListener : void dragOver([DragSourceDragEvent dsde])
    NoListener --> NoListener : void dragExit([DragSourceEvent dse])
    NoListener --> NoListener : void dropActionChanged([DragSourceDragEvent dsde])
    NoListener --> Ended : void dragDropEnd([DragSourceDropEvent dsde])
    NoListener --> NoListener : void dragMouseMoved([DragSourceDragEvent dsde])
    NoListener --> NoListener : Transferable getTransferable()
    NoListener --> NoListener : void updateCurrentCursor([int sourceAct], [int targetAct], [int status])

    HasListener --> HasListener : DragSource getDragSource()
    HasListener --> HasListener : Component getComponent()
    HasListener --> HasListener : DragGestureEvent getTrigger()
    HasListener --> HasListener : int getSourceActions()
    HasListener --> HasListener : void setCursor([Cursor c])
    HasListener --> HasListener : Cursor getCursor()
    HasListener --> NoListener : void removeDragSourceListener([DragSourceListener dsl])
    HasListener --> HasListener : void transferablesFlavorsChanged()
    HasListener --> HasListener : void dragEnter([DragSourceDragEvent dsde])
    HasListener --> HasListener : void dragOver([DragSourceDragEvent dsde])
    HasListener --> HasListener : void dragExit([DragSourceEvent dse])
    HasListener --> HasListener : void dropActionChanged([DragSourceDragEvent dsde])
    HasListener --> Ended : void dragDropEnd([DragSourceDropEvent dsde])
    HasListener --> HasListener : void dragMouseMoved([DragSourceDragEvent dsde])
    HasListener --> HasListener : Transferable getTransferable()
    HasListener --> HasListener : void updateCurrentCursor([int sourceAct], [int targetAct], [int status])

    Ended --> [*]

    note right of HasListener
        addDragSourceListener() throws TooManyListenersException
        if called again in HasListener state.
        Only one DragSourceListener is permitted at a time.
    end note
